# omni_slam

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
apps/: CMakeLists.txt  run_vo.cpp
apps/vo/: main.cpp
configs/: svo.json  svo_euroc.json
docs/: Installation.md
scripts/: build_dependencies.sh  build_dependencies_macos.sh
src/: CMakeLists.txt
src/app/: run_svo.cpp  run_vo.cpp
src/camera_model/: camera_model.cpp  camera_model.hpp  pinhole_radtan.hpp  stereographic_param.hpp  stereographic_projection.hpp
src/config/: svo_config.cpp  svo_config.hpp
src/core/: types.hpp
src/core/utils/: logger.hpp
src/database/: Frame.cpp  Frame.hpp  MapPoint.cpp  MapPoint.hpp
src/dataset_loader/: dataset_types.hpp  euroc_loader.cpp  euroc_loader.hpp  vio_loader.cpp  vio_loader.hpp
src/device/: dataset_simulator.hpp  dataset_types.hpp  device_interface.hpp  euroc_loader.cpp  euroc_loader.hpp  vio_loader.cpp  vio_loader.hpp
src/feature_tracking/: optical_flow.cpp  optical_flow.hpp  tracking_result.hpp
src/odometry/: odometry.hpp  odometry_result.hpp  pipeline.hpp  sliding_window.cpp  sliding_window.hpp  stereo_vo.cpp  stereo_vo.hpp  vo_pipeline.cpp  vo_pipeline.hpp
src/optical_flow/: optical_flow.cpp  optical_flow.hpp  stereo_optical_flow.cpp  stereo_optical_flow.hpp
src/optimizer/: geometry.hpp
src/solver/: geometry.hpp
src/utils/: logger.hpp  types.hpp
tests/: CMakeLists.txt
tests/core/: test_logger.cpp
